# SimGUI

./: .coveragerc  .gitignore  CLAUDE.md  Makefile  README.md  SimGUI.spec  debug_import.py  debug_import.spec  install-macos-release.sh  main.py  pyproject.toml  pytest.ini  qt_main.py  qt_theme.py  requirements-dev.txt  requirements.txt  sim-standard.example.json  state_manager.py  test_audit_report.md  test_minimal.py  test_minimal.spec  theme.py  version.py
debian/: changelog  control  install  postinst  rules  simgui-launcher  simgui.desktop
dialogs/: __init__.py  adm1_dialog.py  artifact_export_dialog.py  load_card_file_dialog.py  network_storage_dialog.py  network_storage_dialog_qt.py  simulator_settings_dialog.py
docs/: PYQT6_MIGRATION_PLAN.md  TODO.md  WORKFLOW_PLAN.md  auto-read-flow.md  file-formats.md  index.md
etc/: simgui-mount.sudoers
managers/: __init__.py  auto_artifact_manager.py  backup_manager.py  batch_manager.py  card_manager.py  card_watcher.py  csv_manager.py  iccid_index.py  network_storage_manager.py  settings_manager.py  sim_standard.py  standards_manager.py
scripts/: build-deb.sh  build-macos-app.sh  check.sh  create-release.sh  install-macos.sh  install.sh
simulator/: __init__.py  card_deck.py  settings.py  simulator_backend.py  virtual_card.py
tests/: .test_file  conftest.py  test_adm1_dialog_logic.py  test_artifact_export_actual.py  test_artifact_export_helpers.py  test_audit_fixes.py  test_auto_artifact_manager.py  test_auto_reconnect.py  test_backup_manager.py  test_batch_manager.py  test_batch_manager_full.py  test_main_app.py  (+58 more)
(+35 files in other folders)
