[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "simgui"
version = "0.1.0"
description = "Lightweight GUI wrapper for SIM card CLI tools"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

dependencies = []

[project.optional-dependencies]
card = [
    "pyscard>=2.0.0",
    "pytlv>=0.3",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
simgui = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
